// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pricing Box block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-pricing-box alignwide ugb-pricing-box ugb-pricing-box--v2 ugb-pricing-box--columns-1 ugb-pricing-box--design-design className"
>
  <div
    className="ugb-pricing-box__item ugb--shadow-1 ugb-pricing-box--highlighted ugb-pricing-box--is-dark"
    style={
      Object {
        "backgroundColor": "#123456",
        "borderRadius": 6,
      }
    }
  >
    <div
      className="ugb-pricing-box__image"
    >
      <img
        alt="pricingBoxTitle"
        src="imageURL"
      />
    </div>
    <h3
      className="ugb-pricing-box__title"
      style={
        Object {
          "color": "#123456",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "pricingBoxTitle",
          }
        }
      />
    </h3>
    <div
      className="ugb-pricing-box__price-wrapper"
    >
      <div
        className="ugb-pricing-box__price-line"
      >
        <span
          className="ugb-pricing-box__price-prefix"
          style={
            Object {
              "color": "#123456",
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "pricePrefix",
              }
            }
          />
        </span>
        <span
          className="ugb-pricing-box__price"
          style={
            Object {
              "color": "#123456",
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "price",
              }
            }
          />
        </span>
        <span
          className="ugb-pricing-box__price-suffix"
          style={
            Object {
              "color": "#123456",
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "priceSuffix",
              }
            }
          />
        </span>
      </div>
      <p
        className="ugb-pricing-box__subprice"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "perMonthLabel",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-pricing-box__button"
    >
      <div>
        <a
          className="ugb-button ugb-button--align-center ugb-button--size-size ugb-button--design-buttonDesign ugb-button--has-icon"
          href="url"
          style={
            Object {
              "backgroundColor": "#123456",
              "borderColor": undefined,
              "borderRadius": "2px",
              "color": "#123456",
            }
          }
          target="_blank"
        >
          <span
            className="ugb-button--inner"
            style={
              Object {
                "color": "#123456",
              }
            }
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "buttonText",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
    <p
      className="ugb-pricing-box__description"
      style={
        Object {
          "color": "#123456",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "featureList",
          }
        }
      />
    </p>
  </div>
</div>
`;

exports[`Pricing Box block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-pricing-box ugb-pricing-box ugb-pricing-box--v2 ugb-pricing-box--columns-2 ugb-pricing-box--design-basic"
>
  <div
    className="ugb-pricing-box__item"
    style={
      Object {
        "backgroundColor": undefined,
        "borderRadius": undefined,
      }
    }
  >
    <h3
      className="ugb-pricing-box__title"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Title",
          }
        }
      />
    </h3>
    <div
      className="ugb-pricing-box__price-wrapper"
    >
      <div
        className="ugb-pricing-box__price-line"
      >
        <span
          className="ugb-pricing-box__price-prefix"
          style={
            Object {
              "color": undefined,
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "$",
              }
            }
          />
        </span>
        <span
          className="ugb-pricing-box__price"
          style={
            Object {
              "color": undefined,
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "9",
              }
            }
          />
        </span>
        <span
          className="ugb-pricing-box__price-suffix"
          style={
            Object {
              "color": undefined,
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": ".00",
              }
            }
          />
        </span>
      </div>
      <p
        className="ugb-pricing-box__subprice"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-pricing-box__button"
    >
      <div>
        <a
          className="ugb-button ugb-button--align-center ugb-button--size-normal"
          href=""
          style={
            Object {
              "backgroundColor": undefined,
              "borderColor": undefined,
              "borderRadius": "4px",
              "color": undefined,
            }
          }
        >
          <span
            className="ugb-button--inner"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Button text",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
    <p
      className="ugb-pricing-box__description"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
          }
        }
      />
    </p>
  </div>
  <div
    className="ugb-pricing-box__item"
    style={
      Object {
        "backgroundColor": undefined,
        "borderRadius": undefined,
      }
    }
  >
    <h3
      className="ugb-pricing-box__title"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Title",
          }
        }
      />
    </h3>
    <div
      className="ugb-pricing-box__price-wrapper"
    >
      <div
        className="ugb-pricing-box__price-line"
      >
        <span
          className="ugb-pricing-box__price-prefix"
          style={
            Object {
              "color": undefined,
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "$",
              }
            }
          />
        </span>
        <span
          className="ugb-pricing-box__price"
          style={
            Object {
              "color": undefined,
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "29",
              }
            }
          />
        </span>
        <span
          className="ugb-pricing-box__price-suffix"
          style={
            Object {
              "color": undefined,
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": ".00",
              }
            }
          />
        </span>
      </div>
      <p
        className="ugb-pricing-box__subprice"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-pricing-box__button"
    >
      <div>
        <a
          className="ugb-button ugb-button--align-center ugb-button--size-normal"
          href=""
          style={
            Object {
              "backgroundColor": undefined,
              "borderColor": undefined,
              "borderRadius": "4px",
              "color": undefined,
            }
          }
        >
          <span
            className="ugb-button--inner"
            style={
              Object {
                "color": undefined,
              }
            }
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Button text",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
    <p
      className="ugb-pricing-box__description"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
          }
        }
      />
    </p>
  </div>
</div>
`;
